--- a/src/programming-index.org
+++ b/src/programming-index.org
@@ -1,12 +1,15 @@
 #+TITLE: Programming Index
 #+DESCRIPTION: An index of programming blog posts.
 #+OPTIONS: toc:nil
-#+ROAM_TAGS: blog public index programming
+#+ROAM_TAGS: website public index programming
 
 * Introduction
 This is an index of posts that contain source code, posts that are commentary on other people's source code, and hot takes about programming.
 
 * Source Code
 ** [[file:source-code.org][Website Source Code]]
+
+* Concepts / Blog Posts
+** [[file:namespace-el.org][Namespaces in My Emacs?]]
 
 * Tutorials                                       :noexport:
