--- a/src/sitemap.org
+++ b/src/sitemap.org
@@ -5,7 +5,10 @@
 - [[file:ffs-ffs.org][FFS, FFS!]]
 - [[file:fiction-index.org][Fiction Index]]
 - [[file:food-index.org][Food Index]]
+- [[file:iosevka-term-css.org][Iosevka Term CSS]]
 - [[file:lamb-with-wine.org][Lamb with Wine]]
+- [[file:namespace-el.org][Namespaces in My Emacs?]]
 - [[file:programming-index.org][Programming Index]]
 - [[file:todo.org][TODO Items]]
 - [[file:source-code.org][Website Source Code]]
+- [[file:repeated-design.org][repeated-design]]
